2003-08-18  Stanislav Brabec  <sbrabec@suse.cz>

	* Makefile.am: Added xmldocs.make to EXTRA_DIST (needed for
	autoreconf).

2003-08-12  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c: applied patch by Shakti Sen to prevent NULL
	filenames.
	* src/main.c: dont crash if a document fails to open because of
	lack of memory.

2003-05-14  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-05-28  Danilo Segan <dsegan@gmx.net>

	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
	
2003-05-24  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: don't retain the previous file name when opening a new
	one. patch by Muktha Narayan.
	
2003-05-15  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: pass proper arg to va_end. patch by Miguel Ibarra.

2003-04-30  Irene Ryan <irene.ryan@sun.com>

	* help/C/ghex2.xml: Fixed one technical inaccuracy and included 
     a description of the Revert menu item
	* help/C/ghex2-C.omf: Updated the manual release details
	* help/C/*.png: Removed obsolete graphic files
	* help/C/ghex.xml: Removed obsolete file
	* help/C/*.sgml: Removed obsolete SGML files

2003-04-29  Jaka Mocnik  <jaka@gnu.org>

	* made prefs dialog instant-apply.
	* src/ui.c: don't explicitly call gnome_print_job_close(), since
	it is called in ghex_print_job_info_destroy().

2003-04-14  Mike Lei <mike.lei@sun.com>
	
	* configure.in: Added Makefile support for de es fr it sv ko zh_CN zh_TW
	* added online help for above languages and ja

2003-04-11  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c: Deactivate selection for keys other then
	Arrows and PgUp/PgDown.	Fixes bug 109397. patch by Rajkumar
	Sivasamy.
	* src/gtkhex.c: draw highlight in secondary view with the color
	for insensitive state. fixes bug 108756.
	* src/chartable.c: fixed keybindings. fixes 107188.
	* src/ghex-window.c (ghex_window_load): set max undo depth only
	if a document was created. patch by Pasupathi Duraisamy.